third_party/move/move-compiler-v2/tests/lambda/inline-parity/nested_lambda.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `Test::apply` has a function parameter:
  ┌─ tests/lambda/inline-parity/nested_lambda.move:4:16
  │
4 │     public fun apply(f: |u64, u64|u64, x: u64, y: u64): u64 {
  │                ^^^^^ - Parameter `f` has function-valued type `|(u64, u64)|u64`.
